# odrive

./: .gitignore  OdriveS1.py  README.md  hello_world.py  meta.json  pyproject.toml  requirements.txt  run.sh  testing.py
.github/workflows/: license_finder.yml  main.yml
odrive-motor/: run.sh
odrive-motor/src/: __init__.py  main.py  odrive.py  odriveCAN.py  odriveSerial.py  utils.py
odriveS1/: go.mod  go.sum  odriveS1.go  run.sh
odriveS1/src/: main.py
odriveS1/src/odriveS1/: __init__.py  odrive.py  odriveCAN.py  odriveS1.py  odriveSetup.py  utils.py
odrivemotor/src/: __init__.py  main.py  odrive.py  odriveCAN.py  odriveSerial.py
odrivemotor/src/odriveCAN/: __init__.py  odriveCAN.py
odrivemotor/src/odriveSerial/: __init__.py  odriveSerial.py
sample-configs/: config.json
